<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/old_mathematics">
    <ImageView android:src="@drawable/title"
        android:contentDescription="@string/app_name"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scratch_pad"
            style="@style/bordered"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="100"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="14pt" />

	    <TextView
	        android:id="@+id/level"
	        android:layout_width="40dp"
	        android:layout_height="80dp"
	        android:layout_marginTop="20dp"
	        android:drawableTop="@drawable/yellow"
	        android:gravity="center"/>
    </LinearLayout>
    
    <AbsoluteLayout
        android:id="@+id/numbers_pane"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp">
		<Button
	    	android:id="@+id/button0" 
	    	android:tag="0"
		    style="@style/NumberButton"/>
		<Button
	   		android:id="@+id/button1"
	   		android:tag="1" 
	    	style="@style/NumberButton"/>
		<Button
			android:id="@+id/button2"
			android:tag="2" 
			style="@style/NumberButton"/>
		<Button
		    android:id="@+id/button3"
		    android:tag="3" 
		    style="@style/NumberButton"/>
		<Button
	        android:id="@+id/button4"
	        android:tag="4" 
	        style="@style/NumberButton"/>
	   <TextView
	        android:id="@+id/target"
	        android:layout_height="wrap_content"
	        android:layout_width="60dp"
	        android:textSize="14pt"
	        android:gravity="center"/>  
   </AbsoluteLayout>
   <LinearLayout
		android:id="@+id/operations_pad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
    	<Button
   	    	android:id="@+id/op_add"
   	        style="@style/OpButton"
            android:text="@string/plus"
            android:tag="+"/>
        <Button
   	        android:id="@+id/op_sub"
   	        style="@style/OpButton"
           	android:text="@string/minus"
           	android:tag="-"/>
    	<Button
   	    	android:id="@+id/op_mult"
   	        style="@style/OpButton"
            android:text="@string/times"
            android:tag="*"/>
        <Button
   	        android:id="@+id/op_div"
   	        style="@style/OpButton"
           	android:text="@string/divide"
           	android:tag="/"/>
   </LinearLayout>
</LinearLayout>
